# merkle_tree_assignment

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: simple.rs
src/: lib.rs
